# nuclear-escrow

./: .gitignore  .nuclear-state.json  CODEBASE_REFERENCE.md  DEMO_SCRIPT.md  MIGRATION.md  README.md  SHARED_TYPES.md  package-lock.json  package.json
api/: claude-assistant.ts
cli/: init.ts  inspect.ts  package-lock.json  package.json  recover-spawn.ts  submit-milestone.ts
contracts/: package-lock.json  package.json  tsconfig.json
contracts/src/: child-escrow-spawn.ts  config.ts  credential-issuer.ts  domain-setup.ts  escrow-create.ts  escrow-finish.ts  generalized-child-spawn.ts  generalized-escrow-create.ts  mpt-receipt.ts  setup-wallets.ts
contracts/wasm/: finish.wasm
dashboard/: index.html  package-lock.json  package.json  server.ts  vite.config.ts
dashboard/src/: App.tsx  index.css  mock-contracts.ts  mock-data.ts
data/contracts/: co2-tons-1774166823032-vLJj4PS8-1774167163003.json  co2-tons-1774166823032-vLJj4PS8-1774168403732.json  co2-tons-1774166823032-vLJj4PS8-1774170091347.json  (+6 more)
hook/: Makefile  compliance_hook.c  registry_hook.c
oracle/: package-lock.json  package.json
scripts/: build-wasm.sh  deploy-testnet.sh  full-reset.sh  recover-spawn.ts  reset-demo.sh  run-demo.sh
shared/: package-lock.json  package.json
src/: committee.ts  company.ts  oracle-registry.ts  package.json  regulator.ts  tsconfig.json  types.ts
tests/: compliance.test.ts  package.json  tsconfig.json  vitest.config.ts
wasm/: Cargo.toml
wasm/src/: checks.rs  crypto.rs  lib.rs  state.rs
wasm/tests/: checks_tests.rs  crypto_tests.rs  integration_test.rs
(+30 files in other folders)
